# mcp-clickhouse-documentation

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  CODESTYLE.md  Dockerfile  Makefile  README.md  USAGE.md  pyproject.toml
.github/workflows/: main.yml
src/mcp_clickhouse_documentation/: __init__.py  cli.py  database.py  indexer.py  models.py  parser.py  server.py
tests/: __init__.py  test_database.py  test_indexer.py  test_models.py  test_parser.py
